<resources>
    <string name="app_name">Internet Download Manager</string>
    <string name="address">Address</string>
    <string name="get_data">Get data!</string>
    <string name="size">Size:</string>
    <string name="type">Type:</string>
    <string name="_0">0</string>
    <string name="download">Download!</string>
    <string name="downloaded">Downloaded:</string>
<<<<<<< HEAD
    <string name="link_fixed">https://dl95.iijjvii.biz/?file=M3R4SUNiN3JsOHJ6WWQ3aTdPRFA4NW1rRVJIOGdQWTNqSjRkd2dJdUFLVlY3WnM4bk1HaE1OMEVDYUlkd0l1c0NKVUZyR2VJT3B1bU9RT0FvcGswV3ppeCtNRTRxM1RzL0lNd1dOdDRSUm4ycExmenptRm14d3JsS3A3TEhMUlRVbWQ2dDBnK2xuUzExZjdCclFENnRqai9nVUNUT0dGWWxEbE9iOVBKbzVKSndXeUZiUGpwbU4xT3VpT005cVZPMytLUXRRL3YvS1F0aDlsMFRWQkxkSlZQMUp2N3hzK2QvQjVKdjVRVjFrU3dxUEMvT1k0NkM2Q01SalIvTXpJSSsrYjhVeFVoNngwVnluYnF6S2h4d0VrMklQQXR1SEw2OU9LOUlEcUFic3ZrU29XTkorM2c5NU9yc2FndzdoZVk5NlhVbFlCRnkxenlFWm1vSG9aZTkxdzEvTENWdHc9PQ%3D%3D</string>
=======
    <string name="link_fixed">https://rootblog.pl/wp-content/uploads/2021/06/Zrzut-ekranu-z-2021-06-07-13-39-55-1160x680.png</string>
>>>>>>> develop
</resources>