<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/address_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/address"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:hint="Enter URL..."
        android:text="@string/link_fixed"
        app:layout_constraintBaseline_toBaselineOf="@+id/address_textView"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/address_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getData_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/get_data"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_textEdit" />

    <TextView
        android:id="@+id/size_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/size"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getData_button" />

    <TextView
        android:id="@+id/type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/type"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_textView" />

    <TextView
        android:id="@+id/fileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/_0"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/size_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/size_textView"
        app:layout_constraintTop_toBottomOf="@+id/getData_button" />

    <TextView
        android:id="@+id/fileType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/_0"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/type_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/type_textView"
        app:layout_constraintTop_toBottomOf="@+id/fileSize" />

    <Button
        android:id="@+id/download_button"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/download"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileType" />

<<<<<<< HEAD
    <TextView
        android:id="@+id/downloaded_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/downloaded"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_button" />

    <TextView
        android:id="@+id/howManyDownloaded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/_0"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/downloaded_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/downloaded_textView"
        app:layout_constraintTop_toBottomOf="@+id/download_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloaded_textView" />
=======
>>>>>>> develop
</androidx.constraintlayout.widget.ConstraintLayout>